--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Compiled class file
 *.class
+*.pdb
 
 # Log file
 *.log
@@ -9,6 +10,9 @@
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
+.vs/
+bin/
+obj/
 
 # Package Files #
 *.jar
@@ -18,6 +22,7 @@
 *.zip
 *.tar.gz
 *.rar
+*.dll
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
