--- a/HrSystem/HrSystem/HrSystem.csproj
+++ b/HrSystem/HrSystem/HrSystem.csproj
@@ -9,4 +9,10 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.21" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HREntity\HREntity.csproj" />
+    <ProjectReference Include="..\HRModels\HRModels.csproj" />
+    <ProjectReference Include="..\HRService\HRService.csproj" />
+  </ItemGroup>
+
 </Project>
