--- a/HrSystem/Examples/Examples.csproj
+++ b/HrSystem/Examples/Examples.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HRDB\HRDB.csproj" />
+    <ProjectReference Include="..\HREntity\HREntity.csproj" />
+  </ItemGroup>
+
 </Project>
