--- a/HrSystem/HrSystem/Properties/launchSettings.json
+++ b/HrSystem/HrSystem/Properties/launchSettings.json
@@ -1,10 +1,10 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:39354",
-      "sslPort": 44358
+      "applicationUrl": "http://localhost:49813/",
+      "sslPort": 44372
     }
   },
   "profiles": {
@@ -19,11 +19,11 @@
     "HrSystem": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation"
-      }
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
