--- a/HrSystem/Examples/Examples.csproj
+++ b/HrSystem/Examples/Examples.csproj
@@ -6,6 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="bootstrap" Version="5.1.3" />
+    <PackageReference Include="Bootstrap.v3.Datetimepicker" Version="4.17.49" />
+    <PackageReference Include="Bootstrap.v3.Datetimepicker.CSS" Version="4.17.49" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\HRDB\HRDB.csproj" />
     <ProjectReference Include="..\HREntity\HREntity.csproj" />
   </ItemGroup>
