--- a/HrSystem/HRService/HRService.csproj
+++ b/HrSystem/HRService/HRService.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="bootstrap" Version="5.1.3" />
+    <PackageReference Include="Bootstrap.v3.Datetimepicker" Version="4.17.49" />
+    <PackageReference Include="Bootstrap.v3.Datetimepicker.CSS" Version="4.17.49" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\HREntity\HREntity.csproj" />
     <ProjectReference Include="..\HRModels\HRModels.csproj" />
     <ProjectReference Include="..\HRRepository\HRRepository.csproj" />
