--- a/HrSystem/HrSystem/nlog.config
+++ b/HrSystem/HrSystem/nlog.config
@@ -4,7 +4,7 @@
       autoReload="true"
       throwConfigExceptions="true"
       internalLogLevel="info"
-      internalLogFile="D:\vm3\vmhr\internal-nlog-AspNetCore3.txt">
+      internalLogFile="C:\Log\internal-nlog-AspNetCore3.txt">
 
 	<!-- enable asp.net core layout renderers -->
 	<extensions>
@@ -14,7 +14,7 @@
 	<!-- the targets to write to -->
 	<targets>
 		<!-- File Target for all log messages with basic details -->
-		<target xsi:type="File" name="allfile" fileName="D:\vm3\vmhr\nlog-AspNetCore3-all-${shortdate}.log"
+		<target xsi:type="File" name="allfile" fileName="C:\Log\nlog-AspNetCore3-all-${shortdate}.log"
 				layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
 
 		<!-- File Target for own log messages with extra web details using some ASP.NET core renderers -->
