add download button

--- a/HrSystem/HrSystem/HrSystem.csproj
+++ b/HrSystem/HrSystem/HrSystem.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\HRService\HRService.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Resume\" />
+  </ItemGroup>
+
 </Project>
