Added jwt token

--- a/HrSystem/HRSystemApi/Properties/launchSettings.json
+++ b/HrSystem/HRSystemApi/Properties/launchSettings.json
@@ -14,7 +14,8 @@
       "launchBrowser": true,
       "launchUrl": "weatherforecast",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ConnectionString": "Data Source=DESKTOP-C0FBNF9\\SQLEXPRESS;Initial Catalog=HRSystem;Integrated Security=True"
       }
     },
     "HRSystemApi": {
