--- a/HrSystem/HRSystemApi/HRSystemApi.csproj
+++ b/HrSystem/HRSystemApi/HRSystemApi.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.22" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\HRDB\HRDB.csproj" />
     <ProjectReference Include="..\HREntity\HREntity.csproj" />
     <ProjectReference Include="..\HRModels\HRModels.csproj" />
