--- a/HrSystem/HrSystem/Properties/launchSettings.json
+++ b/HrSystem/HrSystem/Properties/launchSettings.json
@@ -11,12 +11,12 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation",
-        "ConnectionString": "Data Source=DESKTOP-C0FBNF9\\SQLEXPRESS;Initial Catalog=HRSystem;Integrated Security=True"
-
-      }
+                                            "environmentVariables": {
+                                                                                        "ASPNETCORE_ENVIRONMENT": "Development",
+                                                                                        "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation",
+                                                                                        "ConnectionString": "Data Source=DESKTOP-C0FBNF9\\SQLEXPRESS;Initial Catalog=HRSystem;Integrated Security=True",
+                                                                                        "ConnectionString": "Data Source=DESKTOP-M39FDL2\\SQLEXPRESS;Initial Catalog=HRSystem;Integrated Security=True"
+                                            }
     },
     "HrSystem": {
       "commandName": "Project",
