--- a/HrSystem/HRSystemApi/Properties/launchSettings.json
+++ b/HrSystem/HRSystemApi/Properties/launchSettings.json
@@ -13,9 +13,13 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "launchUrl": "weatherforecast",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "ConnectionString": "Data Source=DESKTOP-C0FBNF9\\SQLEXPRESS;Initial Catalog=HRSystem;Integrated Security=True"
+                                            "environmentVariables": {
+                                                                                        "ASPNETCORE_ENVIRONMENT": "Development",
+
+
+                                                                                        
+                                                                                        "ConnectionString": "Data Source=DESKTOP-M39FDL2\\SQLEXPRESS;Initial Catalog=HRSystem;Integrated Security=True"
+                                            }
       }
     },
     "HRSystemApi": {
