--- a/HrSystem/HrSystem/HrSystem.csproj
+++ b/HrSystem/HrSystem/HrSystem.csproj
@@ -6,7 +6,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Properties\PublishProfiles\launchSettings.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_WebToolingArtifacts Remove="Properties\PublishProfiles\launchSettings.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="..\.editorconfig" Link=".editorconfig" />
+    <None Include="Properties\PublishProfiles\launchSettings.json">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>Never</CopyToPublishDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
