--- a/HrSystem/HRRepository/HRRepository.csproj
+++ b/HrSystem/HRRepository/HRRepository.csproj
@@ -6,6 +6,10 @@
 
   <ItemGroup>
  
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+ 
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+ 
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.13" />
  
     <PackageReference Include="bootstrap" Version="5.1.3" />
