--- a/HrSystem/BasicExamples/BasicExamples/BasicExamples.csproj
+++ b/HrSystem/BasicExamples/BasicExamples/BasicExamples.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.26" />
+  </ItemGroup>
+
 </Project>
